# nix-gui

./: .gitignore  0001-Interrim-solution-for-Unicode-support.patch  LICENSE  flake.nix  pull_request_template.md  pytest.ini  readme.md  readme.org  setup.py
docs/: architecture_diagram.xml  behavior.md  behavior.org  development.org  extraction.org  overview.org  references.md  references.org  settings.org  usage.md  usage.org
docs/development/: architecture.md  architecture.org  commands.md  commands.org  goals.md  goals.org
docs/writeups/: discourse_announce_2021_10_07.md  discourse_announce_2021_10_07.org
nix_dump_cst_json/: Cargo.toml
nix_dump_cst_json/src/: main.rs
nix_dump_syntax_tree_json/: Cargo.toml
nix_dump_syntax_tree_json/src/: main.rs
nixui/: api.py  containers.py  diff_widget.py  generic_widgets.py  gui.py  icon.py  lang.py  logging.py  main.py  nix_eval.py  option_widgets.py  parser.py  richtext.py  slot_mapper.py  state_model.py  store.py  test.py  update_model.py  util.py  widgets.py
nixui/graphics/: color_indicator.py  diff_widget.py  field_widgets.py  generic_widgets.py  icon.py  main_window.py  nav_interface.py  nav_widgets.py  navbar.py  navlist.py  option_display.py  option_display_group.py  package_manager.py  richtext.py  toggle_switch.py  widgets.py
nixui/nix/: eval_attribute.nix  get_all_nixos_declaration_files.nix  lib.nix  (+3 more)
scrape_github/: extract_data.py  get_files.py  main.py
screenshots/: historical_2021_06_23.webm
src/: api.py  containers.py  gui.py  load.sh  option_widgets.py  richtext.py  shell.nix  widgets.py
(+43 files in other folders)
