[package]
name = "nix_dump_syntax_tree_json"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "^1.0.59"

[dependencies.rnix]
git = "https://github.com/nix-gui/rnix-parser"
features = [ "serde1" ]
